--- a/style.css
+++ b/style.css
@@ -103,26 +103,50 @@ spam{
     padding: 10px 15px;
     border-radius: 10px;
 }
-/*footer css start*/
-.footer_section{
-    padding-bottom: 300px;
+/* experinces css start */
+.experinces{
+    height: 500px;
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
 }
-.container_f{
-    width: 1280px; 
+.container_3{
+    width: 1280px;
     margin: auto;
 }
-.row_f{
+.row_3{
     width: 100%;
 }
-.f_child_1{
-    width: 45%;
+.titel{
+   
+    padding-bottom: 50px;
+}
+/* left box */
+.info_left{
+    width: 48%;
     float: left;
-    border-left: 3px solid black;
-    background-image: linear-gradient(45def, lightsalmon, tomatot);
+    
 }
 
-.f_child_2{
-    width: 45%;
-    float: left;
-    border: 3px solid red;
+.box_1 {
+    width: 550px;
+    box-shadow: 10px 10px 40px gray;
+    background-color: white;
+    padding-left: 10px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+.box_1 h3{
+    color: orange;
+}
+#border_left{
+    border-left: 3px solid black;
+    border-image: linear-gradient( lightsalmon tomato);
+    border-image-slice: 1;
+
+}
+/* right box */
+.info_right{
+    width: 46%;
+    float: right;
 }
